# openenv-customer-support-agent

./: .gitignore  README.md  update_tasks.py
my_env/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
my_env/server/: __init__.py  app.py  your_environment.py
my_env/tasks/: __init__.py  common.py  easy.py  hard.py  medium.py
